Remove an ability to turn on mobile sidebar on landing page, add minor fixes in footer and features page

--- a/src/components/Hero/StartScreen/styles.module.css
+++ b/src/components/Hero/StartScreen/styles.module.css
@@ -43,6 +43,13 @@
     margin-top: 32px;
     margin-bottom: 56px;
     width: 600px;
+
+    color: var(--swm-landing-heading);
+}
+
+.subheadingLabel span {
+    padding-bottom: 2px;
+    border-bottom: 4px solid var(--swm-landing-heading);
 }
 
 @media (max-width: 768px) {
@@ -85,10 +92,12 @@
 
 @media (min-height: 768px) and (max-width: 768px) {
     .heading {
+        position: static;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
 
-        height: 100%;
+        height: 100vh;
     }
 
     .foregroundLabel {
