--- a/src/components/HomepageButton/styles.module.css
+++ b/src/components/HomepageButton/styles.module.css
@@ -26,7 +26,7 @@
 }
 
 .homepageButton p {
-    margin: 0;
+    margin: 0 0 2px 0;
 }
 
 .homepageButton svg {
